# 5pk

./: .gitignore  LICENSE  README.md  pyproject.toml  shell.nix
disk-prices/: pyproject.toml
disk-prices/src/disk_prices/: main.py
karlbench/: pyproject.toml
karlbench/src/: lists.nu  main.py  plot.py
src/: main.nu  plot.py
src/disk_prices/: main.py  scraper.py
src/karlbench0/: main.nu  plot.py
src/karlbench1/: main.py
