[project]
name = "5pk"
version = "0.1.0"
requires-python = "~=3.11"
dependencies = [
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",

    "blkinfo>=0.2.0",
    "plumbum>=1.9.0",
    "psutil>=7.0.0",

    "beautifulsoup4>=4.13.4",
    "lxml>=5.4.0",
    "requests>=2.32.3",
]

[project.scripts]
karlbench = "karlbench1:main"
disk-prices = "disk_prices:main"

[build-system]
requires = ["uv_build>=0.7.7,<0.8.0"]
build-backend = "uv_build"


