[project]
name = "disk-prices"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "lxml>=5.4.0",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "requests>=2.32.3",
]

[project.scripts]
disk-prices = "disk_prices:main"

[build-system]
requires = ["uv_build>=0.7.7,<0.8.0"]
build-backend = "uv_build"


